    * Adds support for Accept HTTP request header.
    * Upgrades Apache Commons Lang dependency to 3.3.2.
    * Upgrades to Apache Commons Codec dependency to 1.10.

version 4.7.1 (2014-11-11)
    * Upgrades Nimbus JOSE+JWT dependency to 3.2.2.

version 4.8 (2014-11-20)
    * Adds new ClientCredentialsParser class.
    * Fixes OIDCClientInformation parsing of secrets with no expiration (iss
      #117).
    * Adds missing shadow methods to BearerTokenError (iss #116).
    * Upgrades Nimbus JOSE+JWT dependency to 3.4.

version 4.8.1 (2014-12-14)
    * Upgrades Nimbus JOSE+JWT dependency to 3.5.

version 4.8.2 (2015-01-12)
    * Upgrades Nimbus JOSE+JWT dependency to 3.6.

version 4.8.3 (2015-01-15)
    * Upgrades Nimbus JOSE+JWT dependency to 3.7.

version 4.8.4 (2015-02-03)
    * Renames OIDCProviderMetadata methods to match established convention.
    * Adds missing static AuthenticationRequest.parse(URI) method.

version 4.8.5 (2015-02-04)
    * Refines AuthorizationRequest.parse error reporting.
    * Refines AuthenticationRequest.parse error reporting.
    * Refines TokenRequest.parse error reporting.

version 4.9 (2015-02-18)
    * Add convenience Response.indicatesSuccess method.
    * Add convenience HTTPResponse.indicatesSuccess method.
    * Fixes UserInfoErrorResponse.parse bug.

version 4.10 (2015-02-23)
    * Adds support for session_state in OpenID Connect authentication response.

version 4.11 (2015-03-05)
    * Adds optional HTTPRequest entity body length limit to guard against DoS
      attacks.

version 4.12 (2015-03-14)
    * HTTPRequest adds support for arbitrary headers.
    * HTTPResponse adds support for arbitrary headers.

version 4.12.1 (2015-03-16)
    * Upgrades to Nimbus JOSE+JWT 3.9.2.
    * Upgrades to JSON Smart 1.3.1.

version 4.13 (2015-04-06)
    * Fixes EncryptionMethod parsing in OIDCClientMetadata (iss #127).
    * Adds AccessTokenResponse.getBearerAccessToken() method (iss #124).