@@ -261,5 +261,7 @@ version 4.12.1 (2015-03-16)
     * Upgrades to JSON Smart 1.3.1.
 
 version 4.13 (2015-04-06)
-    * Fixes EncryptionMethod parsing in OIDCClientMetadata (iss #127).
+    * Adds HTTPResponse.getContentAsJSONArray() method (iss #123).
+    * Adds JSONArrayUtils class (iss #123).
     * Adds AccessTokenResponse.getBearerAccessToken() method (iss #124).
+    * Fixes EncryptionMethod parsing in OIDCClientMetadata (iss #127).
